# ChangeLog for sys-apps/calculate-lib
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-lib-2.2.0.0_p20100901-r1 (01 Sep 2010)

  01 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-lib-2.2.0.0_p20100901.ebuild,
  +calculate-lib-2.2.0.0_p20100901-r1.ebuild:
  Daily update.

*calculate-lib-2.2.0.0_p20100901 (01 Sep 2010)

  01 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-lib-2.2.0.0_p20100813-r1.ebuild,
  +calculate-lib-2.2.0.0_p20100901.ebuild:
  Daily update. Remove old live ebuild.

*calculate-lib-2.2.0.0_p20100826-r1 (26 Aug 2010)

  26 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-lib-2.2.0.0_p20100826.ebuild,
  +calculate-lib-2.2.0.0_p20100826-r1.ebuild:
  Update.

*calculate-lib-2.2.0.0_p20100826 (26 Aug 2010)

  26 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-lib-2.2.0.0_p20100823-r2.ebuild,
  +calculate-lib-2.2.0.0_p20100826.ebuild:
  Daily update.

*calculate-lib-2.2.0.0_p20100823-r2 (25 Aug 2010)

  25 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-lib-2.2.0.0_p20100823-r1.ebuild,
  +calculate-lib-2.2.0.0_p20100823-r2.ebuild:
  Fix depends.

*calculate-lib-2.2.0.0_p20100823 (24 Aug 2010)

  24 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-lib-2.2.0.0_p20100819.ebuild,
  +calculate-lib-2.2.0.0_p20100823.ebuild:
  Daily update.

*calculate-lib-2.2.0.0_p20100816 (16 Aug 2010)

  16 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-lib-2.2.0.0_p20100816.ebuild:
  New live ebuild from 2010/08/16.

*calculate-lib-2.2.0.0_p20100813-r1 (15 Aug 2010)

  15 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-lib-2.2.0.0_p20100813.ebuild,
  +calculate-lib-2.2.0.0_p20100813-r1.ebuild, +files/shortname-fix.patch:
  Change commit version. Add added patch.

*calculate-lib-2.2.0.0_p20100813 (13 Aug 2010)

  13 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>