@@ -15,7 +15,7 @@
 ~sys-apps/calculate-install-2.2.0.0_p20100902 amd64 x86
 ~sys-apps/calculate-client-2.2.0.0_p20100901 amd64 x86
 ~sys-apps/calculate-desktop-2.2.0.0_p20100901 amd64 x86
-~sys-apps/calculate-lib-2.2.0.0_p20100901 amd64 x86
+~sys-apps/calculate-lib-2.2.0.0_p20100902 amd64 x86
 ~sys-apps/calculate-templates-2.2.0.0_p20100901 amd64 x86
 
 ~x11-libs/qtermwidget-0.1 amd64 x86
