@@ -5,5 +5,5 @@
 ~sys-apps/calculate-lib-2.2.0.0_p20100826 amd64 x86
 ~sys-apps/calculate-templates-2.2.0.0_p20100826 amd64 x86
 ~sys-apps/calculate-install-2.2.0.0_p20100902 amd64 x86
-~sys-apps/calculate-lib-2.2.0.0_p20100901 amd64 x86
+~sys-apps/calculate-lib-2.2.0.0_p20100902 amd64 x86
 ~sys-apps/calculate-templates-2.2.0.0_p20100901 amd64 x86
