@@ -1,6 +1,6 @@
 AUX calculate-desktop-2.2.0.0_rc1-r1.patch 456 RMD160 f4f15ea8be06a9e0d71494f23126be5419f07685 SHA1 79dd0a07fcd6c6ec5330e6afa5dcbf6a9fa3208f SHA256 96fe2e348b986000f6d5b069543417df07af1f83099869e451764d385c6738f6
 EBUILD calculate-desktop-2.2.0.0_p20100819-r3.ebuild 1145 RMD160 a1d20e24555d1d822d7b6ceb3d01f01c41c2b56d SHA1 4aaa910ef6f0762a834af73d2af8be1455823d7f SHA256 f42e47b8322c632ae1f7b31706098c00fc0c79010368a7cbed4be7286cbd2a40
-EBUILD calculate-desktop-2.2.0.0_p20100901.ebuild 1145 RMD160 e867546110d9de38c2aea0ae1c61634c69a8b484 SHA1 3b014de8c91ac28aa9251048a68c382062aa1455 SHA256 2c34704b7580d781e499fb9c343fbbe9b9f8b0cc17b2217a5b36bbe219329656
+EBUILD calculate-desktop-2.2.0.0_p20100901-r1.ebuild 1145 RMD160 fac227bfae95d62d046a19573f925f6ca6eee4a8 SHA1 4d806e56ecc17eaac8f058fbed82f38cf864bc70 SHA256 417b0ea7af8f2b92f96a014770ec0e7657f412d022c60041cd7cbb88fcfbc17f
 EBUILD calculate-desktop-2.2.9999.ebuild 1105 RMD160 f4e301021dde0b986beb63e09df2da7198196bee SHA1 30b0c9a44986ac670df023f47070d9a4a6bff5b4 SHA256 75657971d3049a918cb3e3286af564caa646c8ddafd8344437e84a476fccb929
 MISC ChangeLog 2781 RMD160 62286cbb6049e989e5d4cc2ef0f5b312d8fef4ef SHA1 1c5e3d3841bff77af97d808a218fa5f949340ed5 SHA256 ef0ef9dccd9cbed8eede1337c9613450c5395400701a0d351500835bcd0445d8
 MISC metadata.xml 315 RMD160 36a1a8d03aed0a483def83e076f484a64d452a8b SHA1 f6e70641eab777d2417d8a7600e8d3f09f53f96f SHA256 67fea0b1af7d10c0f86e72ab40f527e99c6f81f7aace4716344bdfb97c769a18
