@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-lib-2.2.0.0_p20100902 (02 Sep 2010)
+
+  02 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  -calculate-lib-2.2.0.0_p20100901-r1.ebuild,
+  +calculate-lib-2.2.0.0_p20100902.ebuild:
+  Daily update.
+
 *calculate-lib-2.2.0.0_p20100901-r1 (01 Sep 2010)
 
   01 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
